Fix the overflow causing chart controls to sometimes become hidden

--- a/web-server/chart-rendering/client/app/index.css
+++ b/web-server/chart-rendering/client/app/index.css
@@ -112,7 +112,6 @@ label {
     flex-direction: column;
     align-items: start;
     margin-top: 30px;
-    overflow: hidden;
 }
 
 .controls-select {
